# microbits

./: .gitignore  CMakeLists.txt  README.md
cmake/: device_testing.cmake  install.cmake  installed_cmakelists.cmake  tools.cmake
src/crypto/: CMakeLists.txt  README.md
src/crypto/include/ub/crypto/: aes.hpp  c25519.hpp  chacha20.hpp  edwards.hpp  hmac.hpp  kmac.hpp  random.hpp  sha2.hpp  sha3.hpp  utility.hpp
src/crypto/src/: aes.cpp  random.cpp  utility.cpp
src/crypto/src/c25519/: ed25519.cpp  ed25519.hpp  eddsa.cpp  f25519.cpp  f25519.hpp  fprime.cpp  fprime.hpp  uint256.cpp  uint256.hpp
src/crypto/src/cipher/: aes.cpp  chacha20.cpp
src/crypto/src/edwards/: bigint.hpp  ed25519.cpp  ed25519.hpp  ed448.cpp  ed448.hpp  eddh.cpp  eddsa25519.cpp  eddsa448.cpp  f25519.cpp  f25519.hpp  f448.cpp  f448.hpp  fprime8.cpp  fprime8.hpp
src/crypto/src/hash/: sha256.cpp  sha2_common.cpp  sha2_common.hpp  sha2_sha256.cpp  sha2_sha512.cpp  sha3_keccak1600.cpp  sha3_kmac.cpp  sha3_sha3.cpp  sha3_shake.cpp  sha512.cpp
src/crypto/test/: test_utils.cpp  test_utils.hpp
src/crypto/test/c25519/: ed25519.cpp  ed25519_test_data.hpp  ed25519_test_gen.py  eddsa.cpp  eddsa_test_data.hpp  eddsa_test_gen.py  f25519.cpp  f25519_test_data.hpp  f25519_test_gen.py  fprime.cpp  fprime_test_data.hpp  fprime_test_gen.py
src/crypto/test/cipher/: aes.cpp  block_test_data.hpp  block_test_gen.py  chacha20.cpp  stream_test_data.hpp  stream_test_gen.py
src/crypto/test/device/: cipher.cpp  cipher_runner.py  eddh.cpp  eddh_runner.py  eddsa_runner.py  eddsa_sign.cpp  eddsa_verify.cpp  hash_runner.py  sha2_sha256.cpp  sha2_sha512.cpp  sha3_sha256.cpp  sha3_shake256.cpp
src/crypto/test/edwards/: ed25519.cpp  ed25519_test_data.hpp  ed25519_test_gen.py  ed448.cpp  ed448_test_data.hpp  ed448_test_gen.py  eddh.cpp  eddh_test_data.hpp  eddh_test_gen.py  eddsa.cpp  eddsa_test_data.hpp  eddsa_test_gen.py  f25519.cpp  f25519_test_data.hpp  f25519_test_gen.py  f448.cpp  f448_test_data.hpp  f448_test_gen.py  fprime.cpp  fprime_test_data.hpp  fprime_test_gen.py
src/crypto/test/hash/: hash_test.hpp  hash_test_gen.py  sha2_sha256.cpp  sha3_sha3.cpp  sha3_shake.cpp  sha512.cpp
src/crypto/test/mac/: hmac.cpp  kmac.cpp  mac_test_data.hpp  mac_test_gen.py
src/stm32/usb-device/: CMakeLists.txt
src/stm32/usb-device/include/ub/stm32/: usb-device.hpp
src/stm32/usb-device/include/ub/stm32/usbd/: usb-device-fs.hpp  usb-device-g4.hpp
src/stm32/usb-device/src/: pcd_fs.cpp  pcd_fs.hpp  pcd_fs_devices.hpp  pcd_fs_mem.cpp  pcd_stm32g4.cpp  pcd_stm32g4.hpp
src/stm32/utilities/: CMakeLists.txt
src/stm32/utilities/include/ub/: stm32.h
src/usb/device-base/: CMakeLists.txt  descriptors.cmake
src/usb/device-base/include/ub/: usb-device.hpp
src/usb/device-base/include/ub/usbd/: config.hpp  control.hpp  errors.hpp  function.hpp  model.hpp  pcd-interface.hpp  static-config.hpp
src/usb/device-base/include/ub/usbd/impl/: control-endpoint.hpp  control-std.hpp  endpoint-mapper.hpp  static-descriptor.hpp
src/usb/device-base/src/: control-endpoint.cpp  control-handler.cpp  endpoint-mapper.cpp  usb-device.cpp  utility.cpp
src/usb/device-base/tools/: descriptor.cmake  descriptor.py
src/usb/device-base/tools/descriptor_impl/: codegen.py  endpoint_alloc.py  wrappers.py
src/usb/device-base/tools/descriptor_lib/: endpoints.py  interfaces.py  plugin.py  usb_struct.py
src/usb/device-serial/: CMakeLists.txt
src/usb/device-serial/include/ub/: usb-device-serial.hpp
src/usb/device-serial/include/ub/usbd/: serial-config.hpp  serial-protocol.hpp
src/usb/device-serial/src/: function.cpp
src/usb/device-serial/tools/: descriptor.py
src/utilities/: CMakeLists.txt
src/utilities/include/ub/: compiler.hpp  crc32.hpp  errors.hpp  fifo.hpp  user-config.h
src/utilities/src/: crc32.cpp  errors.cpp  fifo.cpp
tools/: fix-header-guards.py
tools/test/device_lib/: device_test.hpp  stm32_ram.ld
tools/test/lib/devtest/: aggregator.py  aggregator_msg.py  aggregator_util.py  application.py  debug_link.py  native.py  runner.py
tools/test/lib/testgen/: rfc7748_ref.py  rfc8032_ref.py  utils.py
tools/usb-descriptor-compiler/: .gitignore  build.gradle.kts  settings.gradle.kts
tools/usb-descriptor-compiler/gradle/wrapper/: gradle-wrapper.properties
tools/usb-descriptor-compiler/src/api/java/microbits/usbd/api/codegen/: ConfigProperty.java  FunctionCodeGenerator.java  TargetCodeGenerator.java  TargetConfigurationData.java
tools/usb-descriptor-compiler/src/api/java/microbits/usbd/api/descriptor/: Descriptor.java  InterfaceAssociationDescriptor.java  InterfaceDescriptor.java  StringReference.java
tools/usb-descriptor-compiler/src/api/java/microbits/usbd/api/endpoint/: EndpointAllocation.java  EndpointDefinition.java  EndpointDefinitionBuilder.java  EndpointDirection.java  EndpointProperties.java  EndpointPropertiesBuilder.java  EndpointSync.java  EndpointType.java  EndpointUsage.java
tools/usb-descriptor-compiler/src/api/java/microbits/usbd/api/iface/: InterfaceDefinition.java  InterfaceDefinitionBuilder.java
tools/usb-descriptor-compiler/src/api/java/microbits/usbd/api/plugin/: CompilerPlugin.java  DescriptorResources.java  FunctionEnvironment.java  FunctionInstance.java  USBFunction.java
tools/usb-descriptor-compiler/src/api/java/microbits/usbd/api/util/: InternalApi.java  SpecificationEntry.java
tools/usb-descriptor-compiler/src/main/java/microbits/usbd/core/: DescriptorCompiler.java
tools/usb-descriptor-compiler/src/main/java/microbits/usbd/core/codegen/: CodePrintStream.java  ConfigChecksGenerator.java  ConfigProperties.java  DescriptorCodeGenerator.java  GenericTargetGenerator.java
tools/usb-descriptor-compiler/src/main/java/microbits/usbd/core/descriptor/: DescriptorContext.java  DescriptorSerializer.java  FieldPrinters.java  IndexedStringDescriptor.java  SerializedDescriptor.java  SerializedField.java  StringDescriptor.java  StringDescriptorContainer.java
tools/usb-descriptor-compiler/src/main/java/microbits/usbd/core/specification/: ControlPipeSpecification.java  DeviceSpecification.java  (+3 more)
(+20 files in other folders)
